# rallies-cli

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
src/: __init__.py  cli.py  helpers.py  manager.py
src/agent/: agent.py  prompts.py
src/rallies/: cli.py  config.py  helpers.py  llm.py  manager.py
src/rallies/agent/: agent.py
